--- a/k8s/ingress.yml
+++ b/k8s/ingress.yml
@@ -3,9 +3,7 @@ kind: Ingress
 metadata:
   name: client-ingress
   annotations:
-    nginx.ingress.kubernetes.io/proxy-body-size: 50g
-    nginx.ingress.kubernetes.io/proxy-buffering: "off"
-    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
+    kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
     - http:
@@ -16,4 +14,4 @@ spec:
               service:
                 name: client-service
                 port: 
-                  number: 3000
+                  number: 80
